better unify logging of classes
make each class use their own logger rather than sharing them